--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "craftsman",
   "version": "0.1.0",
-  "description": "A specification pattern engine",
+  "description": "A javascript specification pattern engine",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,5 +10,8 @@
   "license": "MIT",
   "dependencies": {
     "lodash": "^3.10.1"
+  },
+  "devDependencies": {
+    "should": "^7.1.0"
   }
 }
